<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/recipe_ingredients_text_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="8dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="8dp"
            tools:text="Ingredients List"
            android:textSize="18sp"
            android:textStyle="italic"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_steps_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>